[workspace]
members = [
    "node",
    # "pallets/template",
    # "pallets/kitties",
    # "pallets/blogchain",
    #"pallets/tictactoe",
    #"pallets/dex",
    "pallets/acala/dex",
    "pallets/acala/aggregated-dex",
    "pallets/acala/stable-asset",
    "pallets/acala/modules/*",
    "primitives",
    "runtime",
]
[profile.release]
panic = "unwind"
